--- a/docs/blockchain/packet-purchasing/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing/packet-purchasing.mdx
@@ -4,9 +4,13 @@ hide_title: true
 sidebar_label: Packet Purchasing
 slug: /blockchain/packet-purchasing
 ---
+
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-<img className="docsheader" src={useBaseUrl("img/blockchain/packetpurchasing.png")} />
+<img
+  className="docsheader"
+  src={useBaseUrl("img/blockchain/packetpurchasing.png")}
+/>
 
 # Packet Purchasing
 
@@ -71,11 +75,11 @@ own transactions added to the same banner.
 
 Sometime before the expiration block, the OUI operator will submit a
 [`state_channel_close`](https://github.com/helium/proto/blob/master/src/blockchain_txn_state_channel_close_v1.proto)
-transaction channel, a transaction which also shows how many data credits
-are being burned in the name of which hotspots. Should a hotspot not be credited
-the appropriate amount, it has recourse during a "grace period" the ten blocks
-after the closure to file a dispute, using the signed offers as evidence. This
-is done in the form of alternate state channel close transactions.
+transaction channel, a transaction which also shows how many data credits are
+being burned in the name of which hotspots. Should a hotspot not be credited the
+appropriate amount, it has recourse during a "grace period" the ten blocks after
+the closure to file a dispute, using the signed offers as evidence. This is done
+in the form of alternate state channel close transactions.
 
 If there is no overspend or disputes, the second half of the stake and any
 remaining credit is returned to the OUI operator. Otherwise, the entire stake is
