--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -4,6 +4,7 @@ hide_title: true
 sidebar_label: Consensus Protocol
 slug: /blockchain/consensus-protocol
 ---
+
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 <img className="docsheader" src={useBaseUrl("img/blockchain/consensus.png")} />
@@ -37,8 +38,8 @@ In designing the protocol, we wanted to emphasize the following characteristics:
   seen by the blockchain it should be assumed confirmed. Users sending device
   data through the Helium Network cannot tolerate long block settlement times
   typical of other blockchains.
-- **Censorship-resistant transactions** - Hotspots should not be able to censor or
-  otherwise select / deselect transactions to be included in a block.
+- **Censorship-resistant transactions** - Hotspots should not be able to censor
+  or otherwise select / deselect transactions to be included in a block.
 
 ## HoneyBadger BFT
 
@@ -48,9 +49,11 @@ Andrew Miller and the team at the University of Illinois, Urbana-Champaign.
 
 HBBFT is an asynchronous atomic broadcast protocol designed to enable a group of
 known nodes to achieve consensus over unreliable links. In Helium’s
-implementation, a consensus group of [elected Validators](https://explorer-beta.helium.com/validators) receives encrypted
-transactions as inputs and proceeds to reach common agreement on the ordering of
-these transactions before forming a block and adding it to the blockchain.
+implementation, a consensus group of
+[elected Validators](https://explorer-beta.helium.com/validators) receives
+encrypted transactions as inputs and proceeds to reach common agreement on the
+ordering of these transactions before forming a block and adding it to the
+blockchain.
 
 HBBFT relies on a scheme known as threshold encryption. Using this scheme,
 transactions are encrypted using a shared public key, and are only decryptable
@@ -65,29 +68,45 @@ censorship-resistant transactions.
 
 ## The Consensus Group Election
 
-A new Consensus Group \(CG\) is elected once per epoch. Currently there are `43` members elected to each consensus group, as defined in the `num_consensus_members` chain variable. 
+A new Consensus Group \(CG\) is elected once per epoch. Currently there are `43`
+members elected to each consensus group, as defined in the
+`num_consensus_members` chain variable.
 
-:::info 
+:::info
 
-For a more complete overview of how Validators are elected to the consensus group, see the [Election Process Documentation](/mine-hnt/validators/penalties/#the-election-process)
+For a more complete overview of how Validators are elected to the consensus
+group, see the
+[Election Process Documentation](/mine-hnt/validators/penalties/#the-election-process)
 
 :::
 
-
 ## Rewarding Hotspots
 
-At the end of each epoch, mining rewards are distributed by the consensus group to the wallet addresses that have earned them. Currently `65%` of all mining rewards go to the hotspot infrastructure \(with the remaining `35%` being distributed to Helium, Inc and other network investors\). A graphical overview of token reward system can be [viewed here](https://www.helium.com/tokens).
+At the end of each epoch, mining rewards are distributed by the consensus group
+to the wallet addresses that have earned them. Currently `65%` of all mining
+rewards go to the hotspot infrastructure \(with the remaining `35%` being
+distributed to Helium, Inc and other network investors\). A graphical overview
+of token reward system can be [viewed here](https://www.helium.com/tokens).
 
-During the course of any epoch, Hotspots are rewarded for the following list of activities:
+During the course of any epoch, Hotspots are rewarded for the following list of
+activities:
 
-* Successful participation in proof of coverage as a target \(as a “challengee”\) 
-* Witnessing a proof of coverage challenge
-* Transferring device data over the network 
+- Successful participation in proof of coverage as a target \(as a
+  “challengee”\)
+- Witnessing a proof of coverage challenge
+- Transferring device data over the network
 
-During the course of any epoch, Validators are rewarded for the following list of activities per changes from [HIP 55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md):
-* Submitting valid proof of coverage challenges \(as a “challenger”\)
-* Serving as consensus group member
+During the course of any epoch, Validators are rewarded for the following list
+of activities per changes from
+[HIP 55](https://github.com/helium/HIP/blob/main/0055-validator-challenges.md):
 
-The Consensus Group then splits `6%` of all HNT mined, as well as any transaction fees collected during the epoch.
+- Submitting valid proof of coverage challenges \(as a “challenger”\)
+- Serving as consensus group member
 
-Each one of the above activities is recorded in a block using the `reward` transaction. At the completion of each epoch, all the individual `reward` transactions are grouped in a `rewards` transaction at which point all $HNT mined in that epoch are distributed.
+The Consensus Group then splits `6%` of all HNT mined, as well as any
+transaction fees collected during the epoch.
+
+Each one of the above activities is recorded in a block using the `reward`
+transaction. At the completion of each epoch, all the individual `reward`
+transactions are grouped in a `rewards` transaction at which point all $HNT
+mined in that epoch are distributed.
