--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -11,10 +11,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Mining and Token Rewards
 
-While there's no exact formula for calculating how much `HNT` you'll earn
-over a given period, there are some higher level concepts, design elements, and
-rules to keep in mind that will help better explain what you might earn and why.
-This section covers these, as well as some mining and token reward basics.
+While there's no exact formula for calculating how much `HNT` you'll earn over a
+given period, there are some higher level concepts, design elements, and rules
+to keep in mind that will help better explain what you might earn and why. This
+section covers these, as well as some mining and token reward basics.
 
 ## How Do Hotspots Earn Helium Tokens?
 
@@ -22,19 +22,17 @@ The Helium blockchain rewards Hotspots for providing wireless coverage and
 verifying the Helium Network. Hotspots are rewarded in Helium Token, $HNT.
 
 Every epoch, the current consensus group mines approximately 30 blocks on the
-blockchain. In each block, Hotspots perform various types of work and are awarded
-according to the following distribution:
+blockchain. In each block, Hotspots perform various types of work and are
+awarded according to the following distribution:
 
-
-| Reward Type           | Chain Variable          | Description                                                                                                       |
-| :-------------------- | :-----------------------| :---------------------------------------------------------------------------------------------------------------- |
+| Reward Type           | Chain Variable          | Description                                                                                                         |
+| :-------------------- | :---------------------- | :------------------------------------------------------------------------------------------------------------------ |
 | PoC Challenger        | poc_challengers_percent | Rewarded to any Hotspot that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. |
-| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                                                   |
-| Witnesses             | poc_witnesses_percent   | Distributed to all Hotspots that witness a beacon packet as part of a PoC Challenge.                                       |
-| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.     |
-| Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                      |
+| PoC Challengees       | poc_challengees_percent | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                          |
+| Witnesses             | poc_witnesses_percent   | Distributed to all Hotspots that witness a beacon packet as part of a PoC Challenge.                                |
+| Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.  |
+| Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                        |
 | Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.      |
-
 
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is
 Deployed?_**
@@ -46,10 +44,11 @@ while it runs.
 
 ## Target $HNT Production Per Epoch
 
-As of August 1, 2021 (the most-recent halving), the target production rate for new $HNT minted per month is `2,500,000`. This
-means that, if the blockchain performs as designed, it will produce `2,500,000`
-HNT per month. This target rate is based on the following two parameters, as
-defined in their specific chain variables:
+As of August 1, 2021 (the most-recent halving), the target production rate for
+new $HNT minted per month is `2,500,000`. This means that, if the blockchain
+performs as designed, it will produce `2,500,000` HNT per month. This target
+rate is based on the following two parameters, as defined in their specific
+chain variables:
 
 - Target **block time** is `60` seconds.
 - Target **epoch size** is `30` blocks.
@@ -60,7 +59,8 @@ Consensus Group since the last epoch.
 
 So, if the Network achieves its target block time of `60` seconds, and target
 epoch of `30` blocks, the blockchain will produce `2,500,000` HNT per month. Per
-epoch, this equals roughly `1712.704154343` HNT. The math for this is as follows:
+epoch, this equals roughly `1712.704154343` HNT. The math for this is as
+follows:
 
 - `(43200 minutes per month / 30 minutes per epoch) = 1440 epochs per month`
 - `(2500000 tokens minted per month / 1440 epochs per month) = 1736.1111 HNT per epoch`
@@ -69,19 +69,19 @@ epoch, this equals roughly `1712.704154343` HNT. The math for this is as follows
 
 At any point you can go to the
 [Helium blockchain Explorer](http://explorer.helium.com/) to view recent block
-and epoch statistics, past $HNT production numbers, and much more. 
+and epoch statistics, past $HNT production numbers, and much more.
 
 ## HNT Distributions Per Epoch
 
-As calculated above, the target `HNT` per epoch is approximately `1736.1111`. The
-next logical question is, "Where does all this HNT go?" Let's take a look.
+As calculated above, the target `HNT` per epoch is approximately `1736.1111`.
+The next logical question is, "Where does all this HNT go?" Let's take a look.
 
-Below are the mining rewards per epoch as of August 1, 2021. For every complete epoch, marked by the
-election of a new Consensus Group, all the `HNT` produced are distributed over
-the following reward types:
+Below are the mining rewards per epoch as of August 1, 2021. For every complete
+epoch, marked by the election of a new Consensus Group, all the `HNT` produced
+are distributed over the following reward types:
 
 | Reward Type           | Percentage      | HNT Earned by Reward Type |
-| :-------------------- | :------------   | :------------------------ |
+| :-------------------- | :-------------- | :------------------------ |
 | PoC Challenger        | 0.90% - 2.11%   | 15.6250 - 36.6319         |
 | PoC Challengees       | 5.02% - 11.78%  | 87.1527 - 204.5139        |
 | Witnesses             | 20.08% - 47.11% | 348.6111 - 817.8819       |
@@ -95,9 +95,8 @@ the following reward types:
 In the above table you can see the maximum allotted rewards per reward type in
 accordance with HIP 10 (described below). If you want to see the current reward
 type percentage, you can always query the
-[Chain Variables API](/api/blockchain/chain-variables).
-The next maximum allotted rewards change is currently scheduled for **August
-1, 2022.**
+[Chain Variables API](/api/blockchain/chain-variables). The next maximum
+allotted rewards change is currently scheduled for **August 1, 2022.**
 
 ## HIP10 and Variable HNT Rewards for Network Data Transfer
 
@@ -108,8 +107,8 @@ the Helium Community. It ensures that $HNT is rewarded at a rate of 1:1 to the
 amount of Data Credits (DCs) routed by any given Hotspot per epoch. In doing so,
 the Network Data Transfer reward is proportional to the DC spent that epoch.
 This proportional relationship between Network Data Transfer reward type and DC
-is capped at 35% (607.6389 HNT). Therefore, if the DC burned doesn't equal
-the value of `607.6389` HNT, the remaining HNT is redistributed to the Proof of
+is capped at 35% (607.6389 HNT). Therefore, if the DC burned doesn't equal the
+value of `607.6389` HNT, the remaining HNT is redistributed to the Proof of
 Coverage (PoC) rewards groups pro-rata.
 
 Here are a few examples to illustrate how this works in practice:
@@ -137,9 +136,9 @@ Here are a few examples to illustrate how this works in practice:
 In this scenario, total HNT value of DC transferred in this epoch is `2500HNT`.
 This calculation is:`(500,000,000 DC * $0.00001 / $2 HNT Oracle Price)`
 
-- Because the Network DC burn exceeded the `607.6389` available to the
-  Network Data Transfer reward, all Hotspots who did the work over this epoch with
-  split the full `1113.0145HNT` proportionally.
+- Because the Network DC burn exceeded the `607.6389` available to the Network
+  Data Transfer reward, all Hotspots who did the work over this epoch with split
+  the full `1113.0145HNT` proportionally.
 
 **Additional Notes on Reward Types and Payouts**
 
@@ -152,7 +151,8 @@ This calculation is:`(500,000,000 DC * $0.00001 / $2 HNT Oracle Price)`
   above.
 - Hotspots can earn one or more reward types during any given epoch.
 - Hotspots are only eligible to submit one Proof of Coverage Challenge - which
-  results in them earning the `PoC Challenger` reward - **up to once per 360 blocks**.
+  results in them earning the `PoC Challenger` reward - **up to once per 360
+  blocks**.
 - `PoC Challenger`, `PoC Challengee`, and `Witness` reward types get distributed
   in the epoch that includes the corresponding PoC receipt.
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per
@@ -188,8 +188,8 @@ think blocks, not clocks. Here's a step-by-step example to make it clearer:
   seconds (which is double the target of `60` seconds).
 - This would mark `30` blocks over the `60` minute period, conclude an epoch,
   and result in HNT rewards being distributed.
-- As with any epoch, we would distribute the target of (approximately) `1736.1111`
-  HNT.
+- As with any epoch, we would distribute the target of (approximately)
+  `1736.1111` HNT.
 - However, since this epoch took twice as long as normal - `60` minutes versus
   `30` minute target - the blockchain essentially distributes HNT at **half the
   normal rate**.
