--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -188,7 +188,7 @@ output similar to below.
 
 
 ### Selecting Board
-If you had trouble with the above steps here is an Arduino refresher
+If you had trouble with the above steps here is an Arduino refresher.
 
 Next, we need to select the correct board to build for in the Arduino IDE.
 Navigate to \(**Select Tools &gt; Board: &gt; Arduino Mbed OS Portenta Boards &gt; Arduino PortentaH7 \(M7 Core\) \).**
@@ -489,12 +489,12 @@ Note: If you are confused about the device EUI these Arduino boards have the dev
 
 ### Recompile your Arduino Sketch
 
-The Arduino sketch needs to be recompiled with the new App EUI and APP Key and the Portenta with VIsion SHield and LoRa Antenna need to be placed in an advantageous location to find Helium access points. You can power your device with any 5V USB battery pack. Best locations are near windows and the antenna placed vertically.
+The Arduino sketch needs to be recompiled with the new App EUI and APP Key and the Portenta with Vision Shield and LoRa Antenna need to be placed in an advantageous location to find Helium access points. You can power your device with any 5V USB battery pack. Best locations are near windows and the antenna placed vertically.
 
 ### Check Your Helium Device
 
 Now let's head back to the [Helium Console](https://console.helium.com) and look at
-our device page, Scroll down to the chart and click the black debug icon to see incoming data, you should see something similar to the screenshot below. First the dvice needs to "joion" then it can "upload" data.
+our device page, Scroll down to the chart and click the black debug icon to see incoming data, you should see something similar to the screenshot below. First the device needs to "joion" then it can "upload" data.
 
 <img
   src={useBaseUrl(
@@ -901,7 +901,7 @@ What to do when it fails! Lots of possible issues, but your best bet is the Heli
 3. If in the debug pane you see "uplink" but you only have a red dot then you have connected to Helium and that is good, you just have not connected with an integration. Check your decoder and integration settings [Adafruit here](#setup-adafruitio-feed-and-webhook)
 4. If the dot is yellow you have connected with the function decoder but not yet fully with the integration, check you decoder and integration settings [decoder here](#setup-helium-console-function-decoder)
 5. If the dot is blue you have successfully integrated but the data may not be in the correct format, check your decoder/integration [Blue dot here](#view-your-blue-dot-working-device)
-6. Hopefully the above helps. It is very difficult to determine if your nearest Helium Gateway is having issues or if you have done something incorrect with your setup. Once you have a device that connects consistently, then other devices are much easier to setup. Good luck. 
+6. Hopefully the above helps. It is very difficult to determine if your nearest Helium Gateway is having issues or if you have done something incorrect with your setup. Once you have a device that connects consistently, then other devices are much easier to set up. Good luck. 
 
 
 
